# dm

./: .gitignore  CMakeLists.txt  README.md
dm/: CMakeLists.txt  dm_matrix.cpp  dm_matrix.h  dm_matrix.ispc  dm_miscs.ispc  dm_simd_config.isph  dm_transpose.ispc  miscs.cpp  miscs.h
test/: CMakeLists.txt  main.cpp  pdf.cpp  pdf.h  perf-test.cpp
